2010-08-17  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: [CRASH] Console formatting crashes after cross-domain navigation.
        https://bugs.webkit.org/show_bug.cgi?id=44103

        * http/tests/inspector-enabled/resources/console-log-frame-before-navigation.html:
2010-08-17  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: [CRASH] Console formatting crashes after cross-domain navigation.
        https://bugs.webkit.org/show_bug.cgi?id=44103

        * bindings/js/JSInjectedScriptHostCustom.cpp:
        (WebCore::InjectedScriptHost::injectedScriptFor):
        * bindings/v8/custom/V8InjectedScriptHostCustom.cpp:
        (WebCore::InjectedScriptHost::injectedScriptFor):
        * inspector/ConsoleMessage.cpp:
        (WebCore::ConsoleMessage::addToFrontend):

Canonical link: https://commits.webkit.org/56306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65506 268f45cc-cd09-0410-ab3c-d52691b4dbfc