WebCore/bindings/js/JSInjectedScriptHostCustom.cpp
@@ -183,6 +183,9 @@ InjectedScript InjectedScriptHost::injectedScriptFor(ScriptState* scriptState)
     if (injectedScript)
         return InjectedScript(ScriptObject(scriptState, injectedScript));
 
+    if (!canAccessInspectedWindow(scriptState))
+        return InjectedScript();
+
     ASSERT(!m_injectedScriptSource.isEmpty()); 
     pair<long, ScriptObject> injectedScriptObject = injectScript(m_injectedScriptSource, scriptState);
     globalObject->setInjectedScript(injectedScriptObject.second.jsObject());
