WebCore/bindings/v8/custom/V8InjectedScriptHostCustom.cpp
@@ -211,6 +211,9 @@ InjectedScript InjectedScriptHost::injectedScriptFor(ScriptState* inspectedScrip
     if (!val.IsEmpty() && val->IsObject())
         return InjectedScript(ScriptObject(inspectedScriptState, v8::Local<v8::Object>::Cast(val)));
 
+    if (!canAccessInspectedWindow(inspectedScriptState))
+        return InjectedScript();
+
     ASSERT(!m_injectedScriptSource.isEmpty());
     pair<long, ScriptObject> injectedScript = injectScript(m_injectedScriptSource, inspectedScriptState);
     InjectedScript result(injectedScript.second);
